--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -2,6 +2,7 @@ name: CD
 
 on:
   push:
+    branches: [main]
     tags:
       - "v*.*" # on every version tag will build a new android artifact.
 jobs:
