--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   crypto: ^3.0.1
   graphql: ^5.0.0
   flutter_dotenv: ^5.0.2
+  infinite_scroll_pagination: ^3.1.0
 
 dev_dependencies:
   flutter_test:
