fix(ci/cd): list folder contents

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -50,6 +50,9 @@ jobs:
         with:
           name: web
 
+      - name: List content
+        run: ls -la
+
       - name: Upload build files to S3
         uses: shallwefootball/s3-upload-action@master
         with:
