--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -55,6 +55,7 @@ jobs:
         uses: papeloto/action-zip@v1
         with:
           files: ./*
+          recursive: true
           dest: web.zip
 
       - name: Upload build files to S3
