fix(ci/cd): fix deploy workflow

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -56,6 +56,8 @@ jobs:
         with:
           args: zip -r web.zip ./
 
+      - run: ls -la
+
       - name: Upload build files to S3
         uses: shallwefootball/s3-upload-action@master
         with:
