--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -56,7 +56,7 @@ jobs:
         with:
           args: zip -r web.zip ./
 
-      - run: ls -la
+      - run: pwd
 
       - name: Upload build files to S3
         uses: shallwefootball/s3-upload-action@master
