--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -58,11 +58,13 @@ jobs:
 
       - run: pwd
 
-      - name: Upload build files to S3
-        uses: shallwefootball/s3-upload-action@master
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws_key_id: ${{ secrets.AWS_KEY_ID }}
-          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
-          aws_bucket: ${{ secrets.AWS_BUCKET }}
-          source_dir: 'web/web.zip'
-          destination_dir: ''
+          aws-region: eu-west-2
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+      - name: Copy build files to S3
+        run: |
+          aws s3 cp web.zip s3://${{ secrets.AWS_BUCKET }}/
